# mysql-backup-manager

./: .gitignore  Cargo.toml  config.toml  docker-compose.yml  output.toml
.test-files/: 2024-04-16_21-52-30-auth.sql
migrations/: 20240416180821_create_backups_table.sql
src/: config.rs  database.rs  main.rs  utils.rs
src/service/: mod.rs  service.rs
src/service/mysql/: config.rs  database.rs  dump.rs  mod.rs  mysql_defaults.rs  mysql_service.rs  mysqldump.rs  xtrabackup.rs
