[package]
name = "mysql-backup-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "chrono", "uuid", "sqlite" ] }
uuid = { version = "1.7.0", "features" = [ "v7", "serde" ] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tempfile = "3.10.1"
async-trait = "0.1.78"
env_logger = "0.11.3"
